# cpp_seminar

./: .gitignore  CMakeLists.txt  TestLib.cpp  TestLib.hpp  TestLib.tpp  main.cpp
testlib/: patterns.cpp  patterns.hpp  utils.hpp  utils.tpp
